Fixed a bug with pages not showing up

--- a/styles/general.css
+++ b/styles/general.css
@@ -15,6 +15,7 @@ h2,
 h3 {
   text-align: center;
   transform: translateX(-40px);
+  animation: fadeIn 1s;
 }
 
 html {
